# chatbot

./: .gitignore  README.md  docker-compose.yml
chatbot/: Dockerfile  config.example.yml  pyproject.toml
chatbot/src/chatbot/: containers.py
chatbot/src/chatbot/cli/: chatbot_cli.py
chatbot/src/chatbot/database/: vector_store.py
chatbot/src/chatbot/knowledge/: extractor.py  fetcher.py  knowledge_manager.py  url_manager.py
chatbot/src/chatbot/models/: catalog.py  document.py  web.py
chatbot/src/chatbot/rag/: chatbot.py  knowledge_manager.py
chatbot/src/chatbot/rag/document_loaders/: courses_csv_loader.py  programs_csv_loader.py
chatbot/src/chatbot/storage/: weaviate_client.py  weaviate_vector_store.py
chatbot/src/chatbot/web/: application.py  endpoints.py  main.py  middleware.py
chatbot/src/chatbot/web/static/: script.js  styles.css
chatbot/src/chatbot/web/templates/: index.html
chatbot/src/cli/: chatbot_cli.py  main.py
chatbot/src/database/: vector_store.py
chatbot/src/knowledge/: extractor.py  fetcher.py  knowledge_manager.py
chatbot/src/models/: query.py
chatbot/src/web/: main.py
chatbot/tests/unit/chatbot/cli/: test_chatbot_cli.py
docs/: index.md
services/chatbot/: Dockerfile  pyproject.toml
services/chatbot/src/app/: server.py
services/chatbot/src/fastapi/: server.py
services/chatbot/static/: script.js
