[tool.poetry]
name = "ssu-chatbot"
version = "0.1.0"
description = ""
authors = ["Ian Carlson <carlsoni@sonoma.edu>"]
readme = "README.md"
packages = [
    { include = "chatbot", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.23.2"
langserve = "^0.2.2"
langchain-openai = "^0.1.20"
python-dotenv = "^1.0.1"
jinja2 = "^3.1.4"
typer = "^0.9.0"
weaviate-client = "^4.7.1"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chatbot-cli = "chatbot.cli.chatbot_cli:app"
